cleanup and update

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@
 .DS_Store
 
 #test-files
-test*.py
+test*
 
-# VMR Data
-*vmr/
+# Data
+.data/
 
 ## Github Python Template:
 # Byte-compiled / optimized / DLL files
